	* CORE: Fixed problem with capitalization of entities in non-english locales.  ENGLISH now the default.
	* CORE: Fixed problems with using @DatabaseField(foreignColumnName).  Thanks to Knight704.
	* CORE: Fixed problem with storing partially formed objects in the cache because of select arguments.  Thanks to pimduin.
	* CORE: Removed deprecated methods: Dao.setAutoCommit(boolean), isAutoCommit()
	* CORE: Removed deprecated methods: QueryBuilder.clear(), limit(int), offset(int) 
	* CORE: Removed deprecated methods: ForeignCollectionField.maxEagerForeignCollectionLevel(), foreignColumnName() 
	* CORE: Removed deprecated methods: DatabaseFieldConfig.setMaxEagerForeignCollectionLevel()
	* CORE: Removed deprecated methods: DatabaseFieldConfig.setForeignCollectionMaxEagerForeignCollectionLevel()
	* CORE: Removed deprecated methods: DatabaseFieldConfig.setForeignCollectionOrderColumn()
	* CORE: Removed deprecated methods: DatabaseFieldConfig.setForeignCollectionForeignColumnName()
	* JDBC: Added support for UUID database fields for Postgres and MSSQL.  Use dataType = UUID_NATIVE.  Thanks to tsharp.
	* JDBC: Added support for a JdbcConnectionSource that uses an existing database connection.  Thanks to natinusala.
	* JDBC: Fixed (possibly) some problems with the Oracle type with better boolean support.  Thanks to 51mon.
	* JDBC: Removed deprecated method: DataSourceConnectionSource.setUsesTransactions(boolean).
	* JDBC: Removed deprecated method: JdbcPooledConnectionSource.setUsesTransactions(boolean).
	* ANDROID: Added initial take on Loader base classes from EgorAnd for newer Android versions.  Thanks much!!
	* ANDROID: Added better support for Slf4jLoggingLog from JDBC to CORE so Android users can use it.  Thanks to tonyxiao.
	* ANDROID: Fixed the string processing when persisting java.sql.Timestamp classes. Bug #163.
	* ANDROID: Fixed problem with the maxForeignAutoRefreshLevel config setting.  Thanks to Eric Fung et al.  Bug #194.